[project]
name = "bunnyland-starsim"
version = "0.2.0"
description = "Out-of-tree Bunnyland plugin: a stargazing and astronomy pack — a night sky that turns with the calendar, constellations to learn, celestial events to wish on, and navigation by the stars."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "bunnyland>=1.0.0rc2,<2",
    "pydantic>=2.0",
    "relics-ecs>=0.1.1,<0.2",
]

[project.optional-dependencies]
3d = ["bunnyland-3d>=0.3.0"]

[project.entry-points."bunnyland.plugins"]
"bunnyland.starsim" = "bunnyland_starsim.plugin:bunnyland_plugins"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bunnyland_starsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
